# burnout

./: README.md  pyproject.toml
conf/: logging.yml
conf/base/: parameters_evaluation.yml
src/burnout/: __init__.py  __main__.py  settings.py
src/burnout/pipelines/evaluation/: __init__.py  nodes.py  pipeline.py
src/burnout/pipelines/training/: nodes.py  pipeline.py
tests/pipelines/evaluation/: test_pipeline.py
